--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,15 @@ body {
 
     width: 100%;
     height: 8rem;
-
+    
     text-align: center;
 }
 .content h1 {
     font-size: 4rem;
+    margin: 0 0 0.5rem 0;
+    font-weight: lighter;
+}
+.content h2 {
     margin: 0 0 0.5rem 0;
     font-weight: lighter;
 }
