--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,12 +19,12 @@ body {
     margin: auto;
 
     width: 100%;
-    height: 8rem;
+    height: 50%;
     
     text-align: center;
 }
 .container {
-    width: 7%; 
+    width: 70%; 
     margin-left: auto;
     margin-right: auto;
     text-align: left;
